[project]
name = "debugging-q4"
version = "0.1.0"
description = "CCHC Assessment Debugging Q4"
authors = [{ name = "Osama Aljamal", email = "osamaelgamal39@yahoo.com" }]
readme = "README.md"
requires-python = "<=3.11"
dependencies = [
    "dash==2.14.2",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "plotly==5.18.0"
]
